--- a/src/api/templates/new_post.html
+++ b/src/api/templates/new_post.html
@@ -53,7 +53,7 @@
           <p style="font-size: 16px; line-height: 1.6; margin: 0.5em 0">
             Has creado un nuevo post en
             <strong style="color: hsl(71, 100%, 50%); font-weight: bold"
-              >Hand to Hand</strong
+              >First Exchange</strong
             >
             🤝🏼
           </p>
