--- a/src/api/templates/welcome.html
+++ b/src/api/templates/welcome.html
@@ -19,7 +19,7 @@
       style="
         max-width: 600px;
         margin: auto;
-        background: linear-gradient(135deg, hsl(108, 100%, 50%), #f8f9fa);
+        background: linear-gradient(135deg,hwb(248 0% 0%), #f8f9fa);
         border-radius: 12px;
         padding: 4px;
       "
