--- a/src/api/templates/new_post.html
+++ b/src/api/templates/new_post.html
@@ -19,7 +19,7 @@
       style="
         max-width: 600px;
         margin: auto;
-        background: linear-gradient(135deg, hsl(108, 100%, 50%), #f8f9fa);
+        background: linear-gradient(135deg, hwb(248 0% 0%), #f8f9fa);
         border-radius: 8px;
         padding: 4px;
       "
@@ -65,10 +65,10 @@
               <strong>Descripción:</strong> {{ description }}
             </li>
             <li style="padding: 0.3em 0">
-              <strong>Divisa que ofreces:</strong> {{ divisas_one }}
+              <strong>Divisa que vendes:</strong> {{ divisas_one }}
             </li>
             <li style="padding: 0.3em 0">
-              <strong>Divisa que necesitas:</strong> {{ divisas_two }}
+              <strong>Divisa que compras:</strong> {{ divisas_two }}
             </li>
             <li style="padding: 0.3em 0">
               <strong>Fecha de creación:</strong> {{ data_created }}
