--- a/src/api/templates/reset.html
+++ b/src/api/templates/reset.html
@@ -43,7 +43,7 @@
           </div>
           <h2
             style="
-              color:hsl(71, 100%, 50%) ;
+              color:hwb(180 6% 36%) ;
               font-size: 24px;
               margin-bottom: 20px;
               text-align: center;
@@ -70,7 +70,7 @@
                 align="center"
                 style="
                   border-radius: 6px;
-                  background: linear-gradient(135deg, hsl(75, 36%, 74%), hsl(71, 100%, 50%));
+                  background: linear-gradient(135deg, hwb(181 71% 6%), hwb(180 6% 36%));
                   box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
                 "
               >
@@ -97,8 +97,8 @@
           </table>
 
           <p style="font-size: 16px; line-height: 1.6; margin: 20px 0">
-            <strong style="color: hsl(71, 100%, 50%)"
-              >Este enlace expirará en 20 minutos.</strong
+            <strong style="color: hwb(180 6% 36%)"
+              >Este enlace expirará en 15 minutos.</strong
             >
           </p>
           <p style="font-size: 16px; line-height: 1.6; margin: 0 0 10px">
@@ -108,7 +108,7 @@
             style="
               font-size: 16px;
               line-height: 1.6;
-              color:hsl(71, 100%, 50%) ;
+              color:hwb(180 6% 36%) ;
               font-weight: bold;
               margin: 20px 0 10px;
             "
