--- a/src/api/templates/new_post.html
+++ b/src/api/templates/new_post.html
@@ -19,7 +19,7 @@
       style="
         max-width: 600px;
         margin: auto;
-        background: linear-gradient(135deg, hwb(248 0% 0%), #f8f9fa);
+        background: linear-gradient(135deg, hwb(180 6% 36%), #f8f9fa);
         border-radius: 8px;
         padding: 4px;
       "
@@ -42,7 +42,7 @@
           </div>
           <h2
             style="
-              color: hsl(71, 100%, 50%);
+              color: hwb(180 6% 36%);
               font-size: 24px;
               margin-bottom: 20px;
               text-align: center;
@@ -52,10 +52,9 @@
           </h2>
           <p style="font-size: 16px; line-height: 1.6; margin: 0.5em 0">
             Has creado un nuevo post en
-            <strong style="color: hsl(71, 100%, 50%); font-weight: bold"
+            <strong style="color:hwb(180 6% 36%) ; font-weight: bold"
               >First Exchange</strong
             >
-            🤝🏼
           </p>
           <ul style="list-style: none; padding: 0; margin: 0.5em 0">
             <li style="padding: 0.3em 0">
@@ -91,7 +90,7 @@
                 align="center"
                 style="
                   border-radius: 6px;
-                  background: linear-gradient(135deg, hsl(75, 36%, 74%), hsl(71, 100%, 50%));
+                  background: linear-gradient(135deg, hwb(182 71% 8%), hwb(180 6% 36%));
                   box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
                 "
               >
