--- a/src/api/templates/welcome.html
+++ b/src/api/templates/welcome.html
@@ -42,7 +42,7 @@
           </div>
           <h2
             style="
-              color:hsl(71, 100%, 50%) ;
+              color:hwb(180 6% 36%) ;
               font-size: 24px;
               margin-bottom: 20px;
               padding: 0.8em 1em 0;
@@ -54,11 +54,11 @@
             style="font-size: 16px; line-height: 1.6; padding: 1em 1.6em 0.3em"
           >
             Tu cuenta en
-            <strong style="color:hsl(71, 100%, 50%) ; font-weight: bold"
+            <strong style="color:hwb(180 6% 36%) ; font-weight: bold"
               >First Exchange</strong
             >
             listo!!!, Desde ahora formas parte de uno de los mejores exchange a nivel mundial
-            <span style="color: hsl(71, 100%, 50%); font-weight: bold"
+            <span style="color:hwb(180 6% 36%) ; font-weight: bold"
               >cambia con bajas comisiones,seguridad y rapidez</span
             >.
           </p>
@@ -67,7 +67,7 @@
           >
             Nos alegra tenerte con nosotros. En First Exchange no solo intercambiamos
             divisas:
-            <strong style="color:hsl(71, 100%, 50%) ; font-weight: bold"
+            <strong style="color:hwb(180 6% 36%) ; font-weight: bold"
               >construimos tu futuro.</strong
             >
           </p>
@@ -77,7 +77,7 @@
             contamos con herramientas profesionales, tipos de cambio
            y transacciones instantáneas.Deposita, intercambia y gana!
           </p>
-          <p style="font-size: 18px; color: hsl(71, 100%, 50%); padding: 1em 1.6em 0.3em">
+          <p style="font-size: 18px; color:hwb(180 6% 36%) ; padding: 1em 1.6em 0.3em">
              Bienvenido a First Exchange!!!
           </p>
           <div
