--- a/src/front/components/landingPage/landing-page.css
+++ b/src/front/components/landingPage/landing-page.css
@@ -82,7 +82,7 @@
   border-radius: 25px;
   font-size: 0.9rem;
   font-weight: 600;
-  color: var(--color-blue-900);
+  color: var(--color-aqua-900);
   border: 1px solid #73d4374d;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -230,7 +230,7 @@
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 1rem;
-  color:rgba(13, 235, 235, 0.605) ;
+  color:#93eeee6e ;
 }
 
 .no-commission p {
